# eye-protection-assistant-

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: build-macos-lld.sh  package-macos.sh
src/: App.tsx  bridge.ts  format.ts  i18n.ts  main.tsx  styles.css  types.ts  useAppController.ts  viewSurface.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: domain.rs  lib.rs  macos_window.rs  main.rs  persistence.rs  system_events.rs  window_state.rs
src/components/: BreakView.tsx  ErrorBoundary.tsx  MainView.tsx  WidgetView.tsx
tests/: app.test.tsx  color-schemes.test.ts  contract.test.ts  format.test.ts  offline.test.ts  setup.ts  view-surface.test.ts
