[package]
name = "eye-care-assistant"
version = "0.1.0"
description = "A calm, reliable macOS eye-care reminder"
authors = ["Builder Studio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "eye_care_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSColor", "NSWindow", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", features = ["NSNotification", "NSOperation", "NSString"] }
